Fixed SVG Clipping

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -332,6 +332,7 @@ footer p {
 .socialIcons svg {
     height: 2em;
     width: 2em;
+    overflow: visible;
 }
 
 .footerItems {
